Product overflow fix- COMPLETE

--- a/src/app/Components/home/home-page/products/products.component.css
+++ b/src/app/Components/home/home-page/products/products.component.css
@@ -1,32 +1,37 @@
+/* Products Styles */
 body {
-  display: flex;
-  flex-direction: column;
+
+border: 35px solid white;
+
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #F5F5F5;
-  align-items: center;
-  justify-content: center;
+background-color: #F5F5F5;
 }
 
 div {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   padding-bottom: 2px;
 }
+
 section {
   display: flex;
   flex-direction: row;
-  max-width: 70%;
+  align-items: center;
+  justify-content: space-evenly;
+  max-width: 75%;
   margin:auto;
 }
 
 span {
+
   display: flex;
   flex-direction: column;
   align-items: center;
   padding-bottom: 40px;
-  max-width:40%;
-
+  margin: auto;
 }
 
 /*Image Styles*/
@@ -35,10 +40,12 @@ span {
   object-fit: contain;
   border-radius: 3px;
   padding: 0px 15px;
+
+
 }
 
 #shadow{
-  opacity: 50%;
+opacity: 50%;
   width: 30%;
 }
 
@@ -50,10 +57,9 @@ h2{
 }
 
 p {
-  max-width: 70%;
+  width: 60%;
   text-align: center;
   font-size: larger;
-
 }
 
 /*Button / Link Styles*/
@@ -73,7 +79,6 @@ a {
   }
   section {
     flex-wrap: wrap;
-    align-items: center;
   }
   span {
     margin: 30px 0;
